tests/snapshots/render__teams_panel_loading.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 84, 24)"
---
┌Assigned to me 1/3────────────┐┌Teams─────────────────────────────────────────────┐
│!!! DAN2-7 In Progress Wood-fi││⠋  Loading…                                       │
│!!! DAN-10 In Progress Sprinkl││                                                  │
└ 1 of 7 ──────────────────────┘│                                                  │
┌Recently viewed───────────────┐│                                                  │
│Issues you open land here     ││                                                  │
└──────────────────────────────┘│                                                  │
┌Saved Views───────────────────┐│                                                  │
│⠋  Loading…                   ││                                                  │
└──────────────────────────────┘│                                                  │
┌Teams─────────────────────────┐│                                                  │
│⠋  Loading…                   ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
│                              ││                                                  │
└──────────────────────────────┘└──────────────────────────────────────────────────┘
 j move   enter open   tab panel   / find   1-9 jump   esc bac… Dan's Donuts · @dan
