tests/snapshots/render__view_grouped_by_priority.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 26)"
---
┌Assigned to me · In Progress · Inbox────┐┌ Urgent & unassigned  ·  6 issues ────────────────────────────────┐
│⠋  Loading…                             ││group priority    sort manual                                     │
└────────────────────────────────────────┘│3 Urgent  ·  3 High                                               │
┌Recently viewed─────────────────────────┐│                                                                  │
│Issues you open land here               ││Urgent  3                                                         │
└────────────────────────────────────────┘│    DAN2-7 Wood-fired oven runs 40°C…  In Progress   oven  dan  1d│
┌Saved Views─────────────────────────────┐│    DAN-10 Sprinkle dispenser …  In Progress   production  dan  1d│
│Urgent & unassigned                     ││    DAN2-3 Add gluten-free base option to t…  Todo   menu  dan  1d│
│Oven incidents                          ││High  3                                                           │
│Menu ideas                              ││    DAN2-2 Delivery driver GPS p…  In Progress   delivery  dan  1d│
│                                        ││    DAN-13 Introduce a maple-bacon donut fo…  Todo   menu  dan  1d│
│                                        ││    DAN2-5 Settle the pineapple…  Backlog   customer-poll  dan  1d│
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└ 1 of 3 ────────────────────────────────┘│                                                                  │
┌Teams───────────────────────────────────┐│                                                                  │
│Dan's Pizza                             ││                                                                  │
│Dan's Donuts                            ││                                                                  │
└ 1 of 2 ────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j move   enter open   e edit   v display   z zoom   esc back   q quit                    Dan's Donuts · @dan
