tests/snapshots/render__view_in_right_pane.snap
---
source: tests/render.rs
expression: "render_to_string(&mut app, 110, 26)"
---
┌Assigned to me · In Progress · Inbox────┐┌ Urgent & unassigned  ·  6 issues ────────────────────────────────┐
│⠋  Loading…                             ││group status    sort manual                                       │
└────────────────────────────────────────┘│3 In Progress  ·  2 Todo  ·  1 Backlog                            │
┌Recently viewed─────────────────────────┐│                                                                  │
│Issues you open land here               ││In Progress  3                                                    │
└────────────────────────────────────────┘│!!! DAN2-7 Wood-fired oven runs 40°C too hot on F…   oven  dan  1d│
┌Saved Views─────────────────────────────┐│!!! DAN-10 Sprinkle dispenser jams during t…   production  dan  1d│
│Urgent & unassigned                     ││!!  DAN2-2 Delivery driver GPS points to the …   delivery  dan  1d│
│Oven incidents                          ││Todo  2                                                           │
│Menu ideas                              ││!!! DAN2-3 Add gluten-free base option to the onl…   menu  dan  1d│
│                                        ││!!  DAN-13 Introduce a maple-bacon donut for the …   menu  dan  1d│
│                                        ││Backlog  1                                                        │
│                                        ││!!  DAN2-5 Settle the pineapple-on-pizza…   customer-poll  dan  1d│
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
│                                        ││                                                                  │
└ 1 of 3 ────────────────────────────────┘│                                                                  │
┌Teams───────────────────────────────────┐│                                                                  │
│Dan's Pizza                             ││                                                                  │
│Dan's Donuts                            ││                                                                  │
└ 1 of 2 ────────────────────────────────┘└──────────────────────────────────────────────────────────────────┘
 j move   enter open   e edit   v display   z zoom   esc back   q quit                    Dan's Donuts · @dan
